[package]
name = "foundry-process-sandbox"
version = "0.2.1"
license = "GPL-3.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
sha2 = "0.9.1"
crossbeam = "0.7.3"
hex = "0.4.2"
log = "0.4.8"
mio = {version = "0.7.0", features = ["uds", "os-poll"]}
once_cell = "1.3.1"
parking_lot = "0.11.0"
remote-trait-object = "0.4.0"
serde_cbor = "0.11.1"

[dev-dependencies]
linkme = "0.2.1"

[[bin]]
path = "./tests/simple/simple.rs"
name = "test_simple_rs"
